# ros2_learning_journey

./: .gitignore  .ros2_bashrc  frames_2025-09-23_08.34.11.gv  ros2_env_v7.bat  学习记录.md
four_workspace/src/hello_moveit/: CMakeLists.txt  package.xml
four_workspace/src/hello_moveit/launch/: ur_model_state.launch.py
four_workspace/src/hello_moveit/src/: cartesian_moveit.cpp  nihao_moveit.cpp  ur_robot_model_and_state.cpp
four_workspace/src/my_ur_launcher/: CMakeLists.txt  package.xml
four_workspace/src/my_ur_launcher/launch/: test_moveit.launch.py  ur_moveit.launch.py
four_workspace/src/ur_planning_scene_ros_api/: CMakeLists.txt  package.xml
four_workspace/src/ur_planning_scene_ros_api/launch/: move_group.launch.py  move_group.rviz  planning_scene_ros_api_tutorial.launch.py  ur_moveit.launch.py  ur_moveit2.launch.py
four_workspace/src/ur_planning_scene_ros_api/src/: planning_scene_ros_api_tutorial.cpp
four_workspace/src/ur_planning_scene_tutorial/: CMakeLists.txt  package.xml
four_workspace/src/ur_planning_scene_tutorial/launch/: planning_scene_tutorial.launch.py
four_workspace/src/ur_planning_scene_tutorial/src/: planning_scene_tutorial.cpp
ros2_ws/src/more_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/more_interfaces/msg/: AddressBook.msg
ros2_ws/src/more_interfaces/src/: publish_address_book.cpp
ros2_ws/src/my_package/: package.xml  setup.py
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
ros2_ws/src/py_srvcli/: package.xml  setup.cfg  setup.py
ros2_ws/src/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/tutorial_interfaces/msg/: Sphere.msg
ros2_ws2/src/: ur3.urdf
ros2_ws2/src/polygon_base/: CMakeLists.txt  package.xml
ros2_ws2/src/polygon_base/src/: area_node.cpp
ros2_ws2/src/polygon_plugins/: CMakeLists.txt  package.xml  plugins.xml
ros2_ws2/src/polygon_plugins/src/: polygon_plugins.cpp
ros2_ws2/src/python_parameters/: package.xml  setup.cfg  setup.py
ros2_ws2/src/python_parameters/launch/: python_parameters_launch.py
ros2_ws2/src/ur3_trajectory_publisher/: package.xml  setup.cfg  setup.py
ros2_ws2/src/ur3_trajectory_publisher/ur3_trajectory_publisher/: trajectory_publisher.py  v2_trajectory_publisher.py
workspaces3/: ur3_calibration.yaml
workspaces3/src/hello_moveit/: package.xml
workspaces3/src/hello_moveit/src/: hello_moveit.cpp  (+1 more)
workspaces3/src/ur3_cartesian_control/: package.xml  setup.cfg  setup.py
workspaces3/src/ur_moveit_control/: setup.cfg
学习记录/: desktop.ini  github管理.md  github链接ssh.md  启动容器的脚本.md  学习记录-副本20250927111937.md  学习记录.md  总结1：ros2正确连接ur机械臂.md
学习记录/问题记录/: 从源码编译驱动后不能连接机械臂的问题.md
(+5 files in other folders)
