<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3_trajectory_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chenmj75@mail2.sysu.edu.cn">root</maintainer>
  <license>Apache-2.0</license>


  <!-- 运行 UR 相关 launch、控制器、描述文件 -->
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_bringup</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_controllers</exec_depend>

  <!-- 常用工具依赖（可选，但建议写上） -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
